[package]
name = "tundra"
version = "0.1.0"
authors = ["Guy Watson <guy.w@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_core = "0.67.0"
conrod_glium = "0.67.0"
conrod_winit = "0.67.0"
find_folder = "0.3.0"
glium = "0.25.1"
image = "0.22.2"
